--- a/css/scss/_mobile.scss
+++ b/css/scss/_mobile.scss
@@ -19,8 +19,15 @@
   }
 
   section {
+    width: 100%;
     flex: none;
     padding: 0;
+  }
+
+  .game-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   aside {
@@ -29,8 +36,10 @@
   }
 
   .info {
+    width: 100%;
+    justify-content: space-evenly;
     margin: 0;
-    padding: 20px;
+    padding: 20px 0;
   }
 
   footer {
