--- a/css/style.scss
+++ b/css/style.scss
@@ -156,6 +156,10 @@ aside button:active {
   background: var(--green);
 }
 
+.mob-controller {
+  display: none;
+}
+
 footer {
 	background: #fff;
 	padding: 20px;
