--- a/css/scss/_mobile.scss
+++ b/css/scss/_mobile.scss
@@ -5,6 +5,11 @@
     box-sizing: border-box;
   }
 
+  .wrapper {
+    align-items: center;
+    margin: 0;
+  }
+
   header {
     height: 40px;
   }
@@ -15,6 +20,7 @@
   }
 
   main {
+    width: 100%;
     flex-direction: column;
   }
 
@@ -27,12 +33,20 @@
   .game-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
   }
 
   aside {
     flex: none;
+    justify-content: center;
+    align-items: center;
     padding: 0;
+    height: 60px;
+    min-height: 60px;
+  }
+
+  aside button.new {
+    margin: 0;
   }
 
   .info {
@@ -42,15 +56,43 @@
     padding: 20px 0;
   }
 
+  .game {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+
+  .mob-controller {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
+
+  .touch-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 160px;
+    height: 160px;
+    background-color: rgb(246, 227, 181);
+  }
+
   footer {
-    width: inherit;
+    width: 100%;
+    padding: 5px 20px;
+    justify-content: space-around;
+    border-top: 0.25px solid rgb(175, 175, 175);
   }
 
   .copyright {
+    width: 32%;
     display: flex;
     flex-direction: column-reverse;
-    align-items: center;
     font-size: 12px;
+
   }
 
   .copyright a {
@@ -59,6 +101,14 @@
 
   .year-copyright {
     padding-top: 5px;
+  }
+
+  .share {
+    width: 55%;
+  }
+
+  .share a {
+    margin: 0;
   }
 
 }
