--- a/css/scss/_mobile.scss
+++ b/css/scss/_mobile.scss
@@ -56,7 +56,7 @@
     padding: 20px 0;
   }
 
-  .game {
+  .game, .play, .pause {
     display: flex;
     justify-content: center;
     margin: 0;
